@@ -8,8 +8,17 @@ Welcome to Boddy Mansion Murders
 <a href="/newgame"> Start a New Game</a>
 
 <br>
+<br>
 
-Your Games
-{{listofgames | safe}}
+<h1>Your Games</h1>
 
+Games Awaiting Players
+{{awaitingPlayers | safe}}
+<br>
+Games In Progress
+{{gamesInProgress | safe}}
+<br>
+Completed Games
+{{completedGames | safe}}
+<br>
 {% endblock %}
